# ESP-APP-SHELL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
Cmake/: add_cflags.cmake  add_ldflags.cmake  xtensa-esp32.cmake
Core/App/: CMakeLists.txt
Core/App/TestApp/: main.c
Core/App/Tests/: main.c
Device/ESP32/: linker.ld
Device/ESP32/tools/: esp32.cfg
Test/: build.sh  main.c
Test/gpio/include/driver/: gpio.h
Test/toolchain/lib/gcc/xtensa-esp-elf/13.2.0/plugin/: libcc1plugin.so.0.0.0
Test/toolchain/lib/gcc/xtensa-esp-elf/13.2.0/plugin/include/: tm-preds.h
Test/toolchain/libexec/gcc/xtensa-esp-elf/13.2.0/: lto-wrapper
Test/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/lib/gcc/xtensa-esp-elf/13.2.0/plugin/include/: configargs.h
Test/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/libexec/gcc/xtensa-esp-elf/13.2.0/install-tools/: fixincl
Test2/: CMakeLists.txt
Test2/Core/App/: CMakeLists.txt  main.c
Test2/Devices/Esp32/: CMakeLists.txt
Test2/Toolchain/Esp32/: esp32_toolchain.cmake
Test2/Toolchain/Esp32/libexec/gcc/xtensa-esp-elf/13.2.0/plugin/: gengtype
Toolchain/ESP32/lib/: libcc1.so.0.0.0
Toolchain/ESP32/lib/gcc/xtensa-esp-elf/13.2.0/plugin/: gtype.state  libcp1plugin.so.0.0.0
Toolchain/ESP32/lib/gcc/xtensa-esp-elf/13.2.0/plugin/include/: auto-host.h
Toolchain/ESP32/libexec/gcc/xtensa-esp-elf/13.2.0/: collect2  g++-mapper-server
Toolchain/ESP32/xtensa-esp-elf/include/c++/13.2.0/xtensa-esp-elf/bits/: c++config.h
Toolchain/ESP32/xtensa-esp-elf/include/c++/13.2.0/xtensa-esp-elf/esp32s2/no-rtti/bits/: c++config.h
(+3 files in other folders)
